--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,18 @@
 version: "3.7"
 services:
   web-server:
-    image: mhjkeee/crudback
-    restart: always
+    image: snezhok99/app
     ports:
       - "8080:80"
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
     depends_on:
       - db
       - phpmyadmin
   db:
-    image: mhjkeee/mysql
+    image: snezhok99/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'secret'
