--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,16 @@
 version: "3.7"
 services:
   web-server:
-    image: snezhok99/app
+    image: app-web:latest
+    restart: always
     ports:
       - "8080:80"
-    deploy:
-      replicas: 2
-      restart_policy:
-        condition: on-failure
     depends_on:
       - db
       - phpmyadmin
+
   db:
-    image: snezhok99/mysql
+    image: app-db:latest
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'secret'
@@ -31,5 +29,6 @@ services:
       PMA_PASSWORD: 'secret'
     ports:
       - "5000:80"
+
 volumes:
   mysql-data:
