--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,19 +6,19 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - db
+      # - db
       - phpmyadmin
 
-  db:
-    image: app-db:latest
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 'secret'
-      MYSQL_DATABASE: 'lena'
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql-data:/var/lib/mysql
+  # db:
+  #   image: app-db:latest
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: 'secret'
+  #     MYSQL_DATABASE: 'lena'
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:5.0.1
