--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,15 +20,15 @@ services:
   #   volumes:
   #     - mysql-data:/var/lib/mysql
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:5.0.1
-    restart: always
-    environment:
-      PMA_HOST: 'db'
-      PMA_USER: 'root'
-      PMA_PASSWORD: 'secret'
-    ports:
-      - "5000:80"
+  #phpmyadmin:
+  #  image: phpmyadmin/phpmyadmin:5.0.1
+  #  restart: always
+  #  environment:
+  #    PMA_HOST: 'db'
+  #    PMA_USER: 'root'
+  #    PMA_PASSWORD: 'secret'
+  #  ports:
+  #    - "5000:80"
 
-volumes:
-  mysql-data:
+#volumes:
+#  mysql-data:
