--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - db
+      #- db
       - phpmyadmin
 
   db:
     image: app-db:latest          
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 'secret'
+      MYSQL_ROOT_PASSWORD: 'secretik'
       MYSQL_DATABASE: 'lena'
     ports:
       - "3306:3306"
