--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
     image: phpmyadmin/phpmyadmin:5.0.1
     restart: always
     environment:
-      PMA_HOST: 'db'
+      PMA_HOST: 'db11'
       PMA_USER: 'root'
       PMA_PASSWORD: 'secret'
     ports:
