--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,10 @@ services:
     image: app-db:latest          
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 'secret'
+      MYSQL_ROOT_PASSWORD: 'e'
       MYSQL_DATABASE: 'lena'
     ports:
-      - "4406:4406"
+      - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
 
