--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     image: app-db:latest          
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 'e'
+      MYSQL_ROOT_PASSWORD: 'secret'
       MYSQL_DATABASE: 'lena'
     ports:
       - "3306:3306"
